src/WenyanParser.cpp

// Generated from Wenyan.g4 by ANTLR 4.7.2


#include "antlrgen/WenyanListener.h"

#include "antlrgen/WenyanParser.h"


using namespace antlrcpp;
using namespace antlr4;

WenyanParser::WenyanParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

WenyanParser::~WenyanParser() {
  delete _interpreter;
}

std::string WenyanParser::getGrammarFileName() const {
  return "Wenyan.g4";
}

const std::vector<std::string>& WenyanParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& WenyanParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgramContext ------------------------------------------------------------------

WenyanParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* WenyanParser::ProgramContext::EOF() {
  return getToken(WenyanParser::EOF, 0);
}

std::vector<WenyanParser::BlockContext *> WenyanParser::ProgramContext::block() {
  return getRuleContexts<WenyanParser::BlockContext>();
}

WenyanParser::BlockContext* WenyanParser::ProgramContext::block(size_t i) {
  return getRuleContext<WenyanParser::BlockContext>(i);
}


size_t WenyanParser::ProgramContext::getRuleIndex() const {
  return WenyanParser::RuleProgram;
}

void WenyanParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WenyanListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void WenyanParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WenyanListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}

WenyanParser::ProgramContext* WenyanParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, WenyanParser::RuleProgram);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(33);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << WenyanParser::OP)
      | (1ULL << WenyanParser::XiZhi)
      | (1ULL << WenyanParser::If)
      | (1ULL << WenyanParser::ForStart)
      | (1ULL << WenyanParser::Variable)
      | (1ULL << WenyanParser::Left)
      | (1ULL << WenyanParser::Apply)
      | (1ULL << WenyanParser::DeclareMethod)
      | (1ULL << WenyanParser::DeclareDigit)
      | (1ULL << WenyanParser::IntegerDigit)
      | (1ULL << WenyanParser::FloatDigit)
      | (1ULL << WenyanParser::IntegerDigitCN)
      | (1ULL << WenyanParser::FloatDigitCN))) != 0)) {
      setState(30);
      block();
      setState(35);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(36);
    match(WenyanParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

WenyanParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<WenyanParser::StatementContext *> WenyanParser::BlockContext::statement() {
  return getRuleContexts<WenyanParser::StatementContext>();
}

WenyanParser::StatementContext* WenyanParser::BlockContext::statement(size_t i) {
  return getRuleContext<WenyanParser::StatementContext>(i);
}


size_t WenyanParser::BlockContext::getRuleIndex() const {
  return WenyanParser::RuleBlock;
}

void WenyanParser::BlockContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WenyanListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBlock(this);
}

void WenyanParser::BlockContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WenyanListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBlock(this);
}

WenyanParser::BlockContext* WenyanParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 2, WenyanParser::RuleBlock);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(39); 
    _errHandler->sync(this);
    alt = 1;
    do {
      switch (alt) {
        case 1: {
              setState(38);
              statement();
              break;
            }

      default:
        throw NoViableAltException(this);
      }
      setState(41); 
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
    } while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

WenyanParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

WenyanParser::DeclareNumberContext* WenyanParser::StatementContext::declareNumber() {
  return getRuleContext<WenyanParser::DeclareNumberContext>(0);
}

WenyanParser::DeclarefunctionContext* WenyanParser::StatementContext::declarefunction() {
  return getRuleContext<WenyanParser::DeclarefunctionContext>(0);
}

WenyanParser::IfStatementContext* WenyanParser::StatementContext::ifStatement() {
  return getRuleContext<WenyanParser::IfStatementContext>(0);
}

WenyanParser::ForStatementContext* WenyanParser::StatementContext::forStatement() {
  return getRuleContext<WenyanParser::ForStatementContext>(0);
}

WenyanParser::ApplyStatementContext* WenyanParser::StatementContext::applyStatement() {
  return getRuleContext<WenyanParser::ApplyStatementContext>(0);
}

WenyanParser::AssignStatementContext* WenyanParser::StatementContext::assignStatement() {
  return getRuleContext<WenyanParser::AssignStatementContext>(0);
}

WenyanParser::ExpressionContext* WenyanParser::StatementContext::expression() {
  return getRuleContext<WenyanParser::ExpressionContext>(0);
}


size_t WenyanParser::StatementContext::getRuleIndex() const {
  return WenyanParser::RuleStatement;
}

void WenyanParser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WenyanListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void WenyanParser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WenyanListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}

WenyanParser::StatementContext* WenyanParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 4, WenyanParser::RuleStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(50);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case WenyanParser::DeclareDigit: {
        enterOuterAlt(_localctx, 1);
        setState(43);
        declareNumber();
        break;
      }

      case WenyanParser::DeclareMethod: {
        enterOuterAlt(_localctx, 2);
        setState(44);
        declarefunction();
        break;
      }

      case WenyanParser::If: {
        enterOuterAlt(_localctx, 3);
        setState(45);
        ifStatement();
        break;
      }

      case WenyanParser::ForStart: {
        enterOuterAlt(_localctx, 4);
        setState(46);
        forStatement();
        break;
      }

      case WenyanParser::Apply: {
        enterOuterAlt(_localctx, 5);
        setState(47);
        applyStatement();
        break;
      }

      case WenyanParser::XiZhi: {
        enterOuterAlt(_localctx, 6);
        setState(48);
        assignStatement();
        break;
      }

      case WenyanParser::OP:
      case WenyanParser::Variable:
      case WenyanParser::Left:
      case WenyanParser::IntegerDigit:
      case WenyanParser::FloatDigit:
      case WenyanParser::IntegerDigitCN:
      case WenyanParser::FloatDigitCN: {
        enterOuterAlt(_localctx, 7);
        setState(49);
        expression();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionContext ------------------------------------------------------------------

WenyanParser::ExpressionContext::ExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> WenyanParser::ExpressionContext::OP() {
  return getTokens(WenyanParser::OP);
}

tree::TerminalNode* WenyanParser::ExpressionContext::OP(size_t i) {
  return getToken(WenyanParser::OP, i);
}

tree::TerminalNode* WenyanParser::ExpressionContext::YI3() {
  return getToken(WenyanParser::YI3, 0);
}

std::vector<WenyanParser::NumberContext *> WenyanParser::ExpressionContext::number() {
  return getRuleContexts<WenyanParser::NumberContext>();
}

WenyanParser::NumberContext* WenyanParser::ExpressionContext::number(size_t i) {
  return getRuleContext<WenyanParser::NumberContext>(i);
}

std::vector<WenyanParser::VariableContext *> WenyanParser::ExpressionContext::variable() {
  return getRuleContexts<WenyanParser::VariableContext>();
}

WenyanParser::VariableContext* WenyanParser::ExpressionContext::variable(size_t i) {
  return getRuleContext<WenyanParser::VariableContext>(i);
}


size_t WenyanParser::ExpressionContext::getRuleIndex() const {
  return WenyanParser::RuleExpression;
}

void WenyanParser::ExpressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WenyanListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExpression(this);
}

void WenyanParser::ExpressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WenyanListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExpression(this);
}

WenyanParser::ExpressionContext* WenyanParser::expression() {
  ExpressionContext *_localctx = _tracker.createInstance<ExpressionContext>(_ctx, getState());
  enterRule(_localctx, 6, WenyanParser::RuleExpression);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    setState(76);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case WenyanParser::OP: {
        enterOuterAlt(_localctx, 1);
        setState(52);
        match(WenyanParser::OP);
        setState(55);
        _errHandler->sync(this);
        switch (_input->LA(1)) {
          case WenyanParser::Left:
          case WenyanParser::IntegerDigit:
          case WenyanParser::FloatDigit:
          case WenyanParser::IntegerDigitCN:
          case WenyanParser::FloatDigitCN: {
            setState(53);
            dynamic_cast<ExpressionContext *>(_localctx)->fn = number();
            break;
          }

          case WenyanParser::Variable: {
            setState(54);
            dynamic_cast<ExpressionContext *>(_localctx)->fv = variable();
            break;
          }

        default:
          throw NoViableAltException(this);
        }
        setState(57);
        match(WenyanParser::YI3);
        setState(60);
        _errHandler->sync(this);
        switch (_input->LA(1)) {
          case WenyanParser::Left:
          case WenyanParser::IntegerDigit:
          case WenyanParser::FloatDigit:
          case WenyanParser::IntegerDigitCN:
          case WenyanParser::FloatDigitCN: {
            setState(58);
            dynamic_cast<ExpressionContext *>(_localctx)->sn = number();
            break;
          }

          case WenyanParser::Variable: {
            setState(59);
            dynamic_cast<ExpressionContext *>(_localctx)->sv = variable();
            break;
          }

        default:
          throw NoViableAltException(this);
        }
        break;
      }

      case WenyanParser::Variable:
      case WenyanParser::Left:
      case WenyanParser::IntegerDigit:
      case WenyanParser::FloatDigit:
      case WenyanParser::IntegerDigitCN:
      case WenyanParser::FloatDigitCN: {
        enterOuterAlt(_localctx, 2);
        setState(64);
        _errHandler->sync(this);
        switch (_input->LA(1)) {
          case WenyanParser::Left:
          case WenyanParser::IntegerDigit:
          case WenyanParser::FloatDigit:
          case WenyanParser::IntegerDigitCN:
          case WenyanParser::FloatDigitCN: {
            setState(62);
            dynamic_cast<ExpressionContext *>(_localctx)->fn = number();
            break;
          }

          case WenyanParser::Variable: {
            setState(63);
            dynamic_cast<ExpressionContext *>(_localctx)->fv = variable();
            break;
          }

        default:
          throw NoViableAltException(this);
        }
        setState(73);
        _errHandler->sync(this);
        alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx);
        while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
          if (alt == 1) {
            setState(66);
            match(WenyanParser::OP);
            setState(69);
            _errHandler->sync(this);
            switch (_input->LA(1)) {
              case WenyanParser::Left:
              case WenyanParser::IntegerDigit:
              case WenyanParser::FloatDigit:
              case WenyanParser::IntegerDigitCN:
              case WenyanParser::FloatDigitCN: {
                setState(67);
                dynamic_cast<ExpressionContext *>(_localctx)->sn = number();
                break;
              }

              case WenyanParser::Variable: {
                setState(68);
                dynamic_cast<ExpressionContext *>(_localctx)->sv = variable();
                break;
              }

            default:
              throw NoViableAltException(this);
            } 
          }
          setState(75);
          _errHandler->sync(this);
          alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx);
        }
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssignStatementContext ------------------------------------------------------------------

WenyanParser::AssignStatementContext::AssignStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* WenyanParser::AssignStatementContext::XiZhi() {
  return getToken(WenyanParser::XiZhi, 0);
}

WenyanParser::VariableContext* WenyanParser::AssignStatementContext::variable() {
  return getRuleContext<WenyanParser::VariableContext>(0);
}

tree::TerminalNode* WenyanParser::AssignStatementContext::EndDeclare() {
  return getToken(WenyanParser::EndDeclare, 0);
}

WenyanParser::ExpressionContext* WenyanParser::AssignStatementContext::expression() {
  return getRuleContext<WenyanParser::ExpressionContext>(0);
}

tree::TerminalNode* WenyanParser::AssignStatementContext::ShiYi() {
  return getToken(WenyanParser::ShiYi, 0);
}


size_t WenyanParser::AssignStatementContext::getRuleIndex() const {
  return WenyanParser::RuleAssignStatement;
}

void WenyanParser::AssignStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WenyanListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAssignStatement(this);
}

void WenyanParser::AssignStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WenyanListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAssignStatement(this);
}

WenyanParser::AssignStatementContext* WenyanParser::assignStatement() {
  AssignStatementContext *_localctx = _tracker.createInstance<AssignStatementContext>(_ctx, getState());
  enterRule(_localctx, 8, WenyanParser::RuleAssignStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(78);
    match(WenyanParser::XiZhi);
    setState(79);
    variable();
    setState(80);
    match(WenyanParser::EndDeclare);
    setState(81);
    match(WenyanParser::T__0);
    setState(82);
    expression();
    setState(83);
    match(WenyanParser::ShiYi);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IfStatementContext ------------------------------------------------------------------

WenyanParser::IfStatementContext::IfStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* WenyanParser::IfStatementContext::If() {
  return getToken(WenyanParser::If, 0);
}

WenyanParser::ExpressionContext* WenyanParser::IfStatementContext::expression() {
  return getRuleContext<WenyanParser::ExpressionContext>(0);
}

tree::TerminalNode* WenyanParser::IfStatementContext::EndDeclare() {
  return getToken(WenyanParser::EndDeclare, 0);
}

std::vector<tree::TerminalNode *> WenyanParser::IfStatementContext::Return() {
  return getTokens(WenyanParser::Return);
}

tree::TerminalNode* WenyanParser::IfStatementContext::Return(size_t i) {
  return getToken(WenyanParser::Return, i);
}

std::vector<WenyanParser::BlockContext *> WenyanParser::IfStatementContext::block() {
  return getRuleContexts<WenyanParser::BlockContext>();
}

WenyanParser::BlockContext* WenyanParser::IfStatementContext::block(size_t i) {
  return getRuleContext<WenyanParser::BlockContext>(i);
}

tree::TerminalNode* WenyanParser::IfStatementContext::Else() {
  return getToken(WenyanParser::Else, 0);
}

tree::TerminalNode* WenyanParser::IfStatementContext::EndStatment() {
  return getToken(WenyanParser::EndStatment, 0);
}


size_t WenyanParser::IfStatementContext::getRuleIndex() const {
  return WenyanParser::RuleIfStatement;
}

void WenyanParser::IfStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WenyanListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIfStatement(this);
}

void WenyanParser::IfStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WenyanListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIfStatement(this);
}

WenyanParser::IfStatementContext* WenyanParser::ifStatement() {
  IfStatementContext *_localctx = _tracker.createInstance<IfStatementContext>(_ctx, getState());
  enterRule(_localctx, 10, WenyanParser::RuleIfStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(85);
    match(WenyanParser::If);
    setState(86);
    expression();
    setState(87);
    match(WenyanParser::EndDeclare);
    setState(88);
    match(WenyanParser::Return);
    setState(89);
    block();
    setState(90);
    match(WenyanParser::Else);
    setState(91);
    match(WenyanParser::Return);
    setState(92);
    block();
    setState(94);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx)) {
    case 1: {
      setState(93);
      match(WenyanParser::EndStatment);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ForStatementContext ------------------------------------------------------------------

WenyanParser::ForStatementContext::ForStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* WenyanParser::ForStatementContext::ForStart() {
  return getToken(WenyanParser::ForStart, 0);
}

WenyanParser::NumberContext* WenyanParser::ForStatementContext::number() {
  return getRuleContext<WenyanParser::NumberContext>(0);
}

tree::TerminalNode* WenyanParser::ForStatementContext::ForStart2() {
  return getToken(WenyanParser::ForStart2, 0);
}

WenyanParser::BlockContext* WenyanParser::ForStatementContext::block() {
  return getRuleContext<WenyanParser::BlockContext>(0);
}

tree::TerminalNode* WenyanParser::ForStatementContext::ForEnd() {
  return getToken(WenyanParser::ForEnd, 0);
}


size_t WenyanParser::ForStatementContext::getRuleIndex() const {
  return WenyanParser::RuleForStatement;
}

void WenyanParser::ForStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WenyanListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterForStatement(this);
}

void WenyanParser::ForStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WenyanListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitForStatement(this);
}

WenyanParser::ForStatementContext* WenyanParser::forStatement() {
  ForStatementContext *_localctx = _tracker.createInstance<ForStatementContext>(_ctx, getState());
  enterRule(_localctx, 12, WenyanParser::RuleForStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(96);
    match(WenyanParser::ForStart);
    setState(97);
    number();
    setState(98);
    match(WenyanParser::ForStart2);
    setState(99);
    block();
    setState(100);
    match(WenyanParser::ForEnd);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VariableContext ------------------------------------------------------------------

WenyanParser::VariableContext::VariableContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* WenyanParser::VariableContext::Variable() {
  return getToken(WenyanParser::Variable, 0);
}


size_t WenyanParser::VariableContext::getRuleIndex() const {
  return WenyanParser::RuleVariable;
}

void WenyanParser::VariableContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WenyanListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVariable(this);
}

void WenyanParser::VariableContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WenyanListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVariable(this);
}

WenyanParser::VariableContext* WenyanParser::variable() {
  VariableContext *_localctx = _tracker.createInstance<VariableContext>(_ctx, getState());
  enterRule(_localctx, 14, WenyanParser::RuleVariable);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(102);
    match(WenyanParser::Variable);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ApplyStatementContext ------------------------------------------------------------------

WenyanParser::ApplyStatementContext::ApplyStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

WenyanParser::ApplyFunctionContext* WenyanParser::ApplyStatementContext::applyFunction() {
  return getRuleContext<WenyanParser::ApplyFunctionContext>(0);
}


size_t WenyanParser::ApplyStatementContext::getRuleIndex() const {
  return WenyanParser::RuleApplyStatement;
}

void WenyanParser::ApplyStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WenyanListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterApplyStatement(this);
}

void WenyanParser::ApplyStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WenyanListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitApplyStatement(this);
}

WenyanParser::ApplyStatementContext* WenyanParser::applyStatement() {
  ApplyStatementContext *_localctx = _tracker.createInstance<ApplyStatementContext>(_ctx, getState());
  enterRule(_localctx, 16, WenyanParser::RuleApplyStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(104);
    applyFunction();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ApplyFunctionContext ------------------------------------------------------------------

WenyanParser::ApplyFunctionContext::ApplyFunctionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* WenyanParser::ApplyFunctionContext::Apply() {
  return getToken(WenyanParser::Apply, 0);
}

tree::TerminalNode* WenyanParser::ApplyFunctionContext::At() {
  return getToken(WenyanParser::At, 0);
}

std::vector<WenyanParser::VariableContext *> WenyanParser::ApplyFunctionContext::variable() {
  return getRuleContexts<WenyanParser::VariableContext>();
}

WenyanParser::VariableContext* WenyanParser::ApplyFunctionContext::variable(size_t i) {
  return getRuleContext<WenyanParser::VariableContext>(i);
}

WenyanParser::NumberContext* WenyanParser::ApplyFunctionContext::number() {
  return getRuleContext<WenyanParser::NumberContext>(0);
}


size_t WenyanParser::ApplyFunctionContext::getRuleIndex() const {
  return WenyanParser::RuleApplyFunction;
}

void WenyanParser::ApplyFunctionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WenyanListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterApplyFunction(this);
}

void WenyanParser::ApplyFunctionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WenyanListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitApplyFunction(this);
}

WenyanParser::ApplyFunctionContext* WenyanParser::applyFunction() {
  ApplyFunctionContext *_localctx = _tracker.createInstance<ApplyFunctionContext>(_ctx, getState());
  enterRule(_localctx, 18, WenyanParser::RuleApplyFunction);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(106);
    match(WenyanParser::Apply);
    setState(109);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case WenyanParser::Left:
      case WenyanParser::IntegerDigit:
      case WenyanParser::FloatDigit:
      case WenyanParser::IntegerDigitCN:
      case WenyanParser::FloatDigitCN: {
        setState(107);
        dynamic_cast<ApplyFunctionContext *>(_localctx)->fn = number();
        break;
      }

      case WenyanParser::Variable: {
        setState(108);
        dynamic_cast<ApplyFunctionContext *>(_localctx)->fv = variable();
        break;
      }
